<?xml version="1.0"?>
<package format="3">
  <name>r5a_hardware</name>
  <version>0.1.0</version>
  <description>Hardware interface for R5A robotic arm.</description>

  <maintainer email="your_email@example.com">Your Name</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclpy</depend>
  <depend>ros2_control</depend>
  <depend>controller_manager</depend>
  <depend>hardware_interface</depend>
  <depend>launch</depend>
  <depend>launch_ros</depend>
  <depend>ros2_controllers</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
